tests/core/snapshots/postgres-insert.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(id: "main", src: "users.sql", type: Sql)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
  mutation: Mutation
}

type Mutation {
  createUser(name: String!, email: String): User
  @postgres(
    table: "users"
    operation: "INSERT"
    input: "{\"name\": \"{{.args.name}}\", \"email\": \"{{.args.email}}\"}"
  )
}

type Query {
  users: [User] @postgres(table: "users")
}

type User {
  email: String
  id: Int
  name: String
}
