tests/core/snapshots/postgres-json-jsonb-type.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(id: "main", src: "records.sql", type: Sql)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  records: [Record] @postgres(table: "records")
}

type Record {
  id: Int
  metadata: JSON
  settings: JSON
}
