tests/core/snapshots/postgres-nonexistent-table.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "Table 'posts' not found in database schema",
    "trace": [
      "Query",
      "posts",
      "@postgres"
    ],
    "description": null
  }
]
