tests/core/snapshots/postgres-numeric-bigint.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Metric {
  amount: Float
  counter: String
  id: Int
  ratio: Float
}

type Query {
  metrics: [Metric]
}

schema {
  query: Query
}
