tests/core/snapshots/postgres-numeric-bigint.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(id: "main", src: "metrics.sql", type: Sql)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Metric {
  amount: Float
  counter: String
  id: Int
  ratio: Float
}

type Query {
  metrics: [Metric] @postgres(table: "metrics")
}
