tests/core/snapshots/postgres-pagination.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  users(limit: Int, offset: Int, orderBy: String): [User]
}

type User {
  email: String
  id: Int
  name: String
}

schema {
  query: Query
}
