tests/core/snapshots/postgres-pagination.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
@server
@upstream
@link(id: "main", src: "users.sql", type: Sql)
@link(src: "schema_0.graphql", type: Config) {
  query: Query
}

type Query {
  users(limit: Int, offset: Int, orderBy: String): [User]
  @postgres(
    table: "users"
    limit: "{{.args.limit}}"
    offset: "{{.args.offset}}"
    orderBy: "{{.args.orderBy}}"
  )
}

type User {
  email: String
  id: Int
  name: String
}
