tests/core/snapshots/postgres-range-type.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  reservations: [Reservation]
}

type Reservation {
  bookingPeriod: String
  id: Int
  priceRange: String
}

schema {
  query: Query
}
